@@ -1,7 +1,6 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.config.model.provision;
 
-import com.google.common.collect.ImmutableList;
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.Flavor;
 
@@ -16,12 +15,12 @@ import java.util.Optional;
 public class Host {
 
     private final String hostname;
-    private final ImmutableList<String> aliases;
+    private final List<String> aliases;
     private final Optional<Flavor> flavor;
     private final Optional<Version> version;
 
     public Host(String hostname) {
-        this(hostname, ImmutableList.of(), Optional.empty());
+        this(hostname, List.of(), Optional.empty());
     }
 
     public Host(String hostname, List<String> hostAliases) {
@@ -34,7 +33,7 @@ public class Host {
 
     public Host(String hostname, List<String> hostAliases, Optional<Flavor> flavor, Optional<Version> version) {
         this.hostname = hostname;
-        this.aliases = ImmutableList.copyOf(hostAliases);
+        this.aliases = List.copyOf(hostAliases);
         this.flavor = flavor;
         this.version = version;
     }
@@ -52,7 +51,7 @@ public class Host {
     @Override
     public String toString() {
         return hostname + (aliases.size() > 0 ? " (aliases: " + aliases + ")" : "" ) +
-                (flavor.isPresent() ? " (flavor: " + flavor.get() + ")" : "");
+                (flavor.map(value -> " (flavor: " + value + ")").orElse(""));
     }
 
 }
